Add list quiz resumed